# kuasar

./: CLAUDE.md  Cargo.toml  DESIGN.md  Makefile  k8s-test-progress.md
docs/: e2e-test-recommendations.md  k8s-cluster-setup-for-e2e.md
kuasarctl/: Cargo.toml  README.md
kuasarctl/examples/: README.md  batch-operations.sh  health-check.sh  interactive-shell.sh  non-interactive-exec.sh
kuasarctl/src/: lib.rs  main.rs
kuasarctl/tests/: README.md  command_execution_test.rs  integration_test.rs  interactive_shell_test.rs  prefix_matching_test.rs
tests/integration/kubernetes/: POD_FEATURES_SUMMARY.md  POD_TEST_COVERAGE.md  README.md  common.bash  images.conf  k8s-configmap.bats  k8s-cpu-ns.bats  k8s-credentials-secrets.bats  k8s-cron-job.bats  k8s-dns-policy.bats  k8s-empty-dirs.bats  k8s-env-comprehensive.bats  k8s-exec.bats  k8s-init-containers.bats  k8s-job.bats  k8s-liveness-probes.bats  k8s-nginx-connectivity.bats  k8s-parallel.bats  k8s-pid-ns.bats  k8s-pod-lifecycle.bats  k8s-seccomp.bats  k8s-service-account.bats  k8s-service-connectivity.bats  k8s-shared-volume.bats  k8s-volume.bats  lib.sh  load_images.sh  process_yaml_templates.sh  run_k8s_tests.sh  setup.sh
tests/integration/kubernetes/environment/: k8s-env-comprehensive.bats
tools/kuasar-ctl/: Cargo.toml  build.rs
tools/kuasar-ctl/src/: args.rs  error.rs  interactive.rs  main.rs  sandbox.rs  vsock.rs
vmm/sandbox/: Cargo.toml
vmm/sandbox/src/: lib.rs  sandbox.rs  watchdog.rs
vmm/service/: kuasar-vmm.service
vmm/task/src/: container.rs  main.rs  streaming.rs
(+24 files in other folders)
