[package]
name = "kuasarctl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
nix = { version = "0.28", features = ["term", "signal", "ioctl"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
scopeguard = "1.2"
signal-hook = "0.3"

[dev-dependencies]
tempfile = "3.13"

[lib]
name = "kuasarctl"
path = "src/lib.rs"

[[bin]]
name = "kuasarctl"
path = "src/main.rs"
